--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,31 +6,136 @@
     <link rel="stylesheet" href="styles.css">
     <title>Job Listings</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        .job-list { list-style-type: none; padding: 0; }
-        .job-item { border: 1px solid #ddd; padding: 10px; margin: 10px 0; border-radius: 5px; }
-        .job-title { font-weight: bold; font-size: 1.2em; }
-        .job-link { color: rgb(64, 0, 64); text-decoration: none; }
+        body { font-family: Arial, sans-serif; margin: 20px; text-align: center; background-color: #f8f9fa; }
+        h1 { color: #333; }
+
+        /* Form Styling */
+        .search-form {
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            flex-wrap: wrap;
+        }
+        input, select {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+        button {
+            background-color: #28a745;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+        button:hover {
+            background-color: #218838;
+        }
+
+        /* Loading Spinner */
+        .spinner {
+            display: none;
+            border: 4px solid rgba(0, 0, 0, 0.1);
+            border-left-color: #007bff;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            margin: 20px auto;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Job List Styling */
+        .job-list {
+            list-style-type: none;
+            padding: 0;
+            max-width: 600px;
+            margin: auto;
+        }
+        .job-item {
+            background: white;
+            border: 1px solid #ddd;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 8px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+            text-align: left;
+        }
+        .job-title {
+            font-weight: bold;
+            font-size: 1.2em;
+            color: #007bff;
+        }
+        .job-link {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 5px 10px;
+            background-color: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .job-link:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
 
-    <h1>Latest Job Listings</h1>
-    <button onclick="loadJobs()">Get Jobs</button>
-    <script async src="https://cse.google.com/cse.js?cx=84b55b4ca9a394d34">
-</script>
-<div class="gcse-search"></div>
-     <div id="spinner" class="spinner"></div>
+    <h1>Find Your Dream Job</h1>
+
+    <!-- Search Form -->
+    <form class="search-form" onsubmit="searchJobs(event)">
+        <input type="text" id="skill" placeholder="Enter skill (e.g., Java, Python)">
+        <input type="text" id="location" placeholder="Enter location (e.g., New York)">
+        <input type="text" id="company" placeholder="Enter company (optional)">
+        <button type="submit">Search</button>
+    </form>
+
+    <div class="spinner" id="spinner"></div>
+    <div id="timer" class="timer"></div>
+
     <ul id="jobList" class="job-list"></ul>
 
     <script>
-        function loadJobs() {
-	let spinner = document.getElementById("spinner");
-            fetch('/jobs/search')
-                .then(response => response.json()) // Parse JSON
+        function searchJobs(event) {
+            event.preventDefault(); // Prevent form reload
+            let timerDiv = document.getElementById("timer");
+            let skill = document.getElementById("skill").value.trim();
+            let location = document.getElementById("location").value.trim();
+            let company = document.getElementById("company").value.trim();
+            let spinner = document.getElementById("spinner");
+            let jobList = document.getElementById("jobList");
+
+            // Show spinner while loading
+            spinner.style.display = "block";
+            jobList.innerHTML = "";
+            timerDiv.innerHTML = "";
+
+            // Build query parameters
+            let queryParams = new URLSearchParams();
+            if (skill) queryParams.append("skill", skill);
+            if (location) queryParams.append("location", location);
+            if (company) queryParams.append("company", company);
+
+            // Fetch job listings
+            fetch(`/jobs/search?${queryParams.toString()}`)
+                .then(response => response.json())
                 .then(data => {
-                    let jobList = document.getElementById("jobList");
-                    jobList.innerHTML = ""; // Clear previous data
+                    spinner.style.display = "none";
+                    timerDiv.innerHTML = `Results loaded in ${data.milliseconds/1000} seconds.`;
+
+                    if (data.jobs.length === 0) {
+                        jobList.innerHTML = "<p>No jobs found.</p>";
+                        return;
+                    }
 
                     data.jobs.forEach(job => {
                         let li = document.createElement("li");
@@ -45,9 +150,10 @@
                         jobList.appendChild(li);
                     });
                 })
-                .catch(error => { spinner.style.display = "none";
-                console.error("Error:", error)}
-                );
+                .catch(error => {
+                    spinner.style.display = "none";
+                    console.error("Error:", error);
+                });
         }
     </script>
 
